<resources>
    <string name="app_name">FruitApp</string>
    <string name="btn_play">Play</string>
    <string name="et_nombre">What is your name?</string>
    <string name="et_vidas">Apples</string>
    <string name="jugador_nombre">Player:</string>
    <string name="total_score">Score : 0</string>
    <string name="boton_sumar">Try</string>
    <string name="et_respuesta">Reply</string>
</resources>