<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    tools:context=".Main2Activity_Nivel4"
    android:background="@drawable/wallpaperprincipal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/jugador_nombre"
        android:layout_marginTop="11dp"
        android:layout_marginStart="14dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_nombre"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/total_score"
        android:id="@+id/textView_score"
        android:layout_below="@+id/textView_nombre"
        android:layout_alignStart="@+id/textView_nombre"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/et_vidas"
        android:id="@+id/textView_Manzanas"
        android:layout_alignStart="@+id/textView_nombre"
        android:layout_alignTop="@+id/imageView_vidas"/>

    <ImageView
        android:layout_height="25dp"
        android:layout_width="80dp"
        android:layout_marginStart="103dp"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView_vidas"
        android:layout_below="@+id/textView_score"
        app:srcCompat="@drawable/tresvidas"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:layout_height="120dp"
        android:layout_width="120dp"
        android:layout_marginTop="112dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView_NumUno"
        app:srcCompat="@drawable/cero"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:layout_height="110dp"
        android:layout_width="110dp"
        android:id="@+id/imageView_signo"
        app:srcCompat="@drawable/adicion"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="-2dp"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/imageView_NumUno"/>

    <ImageView
        android:layout_height="120dp"
        android:layout_width="120dp"
        android:layout_marginTop="0dp"
        android:id="@+id/imageView_NumDos"
        android:layout_alignTop="@+id/imageView_NumUno"
        app:srcCompat="@drawable/cero"
        android:contentDescription="@string/app_name"
        android:layout_marginEnd="1dp"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:id="@+id/editText_resultado"
        android:layout_marginBottom="197dp"
        tools:targetApi="o"
        android:autofillHints=""
        android:inputType="number"
        android:hint="@string/et_respuesta"
        android:ems="10"
        android:layout_toStartOf="@+id/imageView_NumDos"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="102dp"
        android:layout_height="34dp"
        android:layout_alignTop="@+id/editText_resultado"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-2dp"
        android:layout_toEndOf="@+id/editText_resultado"
        android:background="@drawable/fondoboton"
        android:onClick="Comparar"
        android:text="@string/boton_sumar"
        android:textColor="@android:color/background_light" />

</RelativeLayout>